    case one is testing tools that complement automata.  (issue #504).

  - ltlsynt has a new option --tlsf that takes the filename of a TLSF
    specification and calls syfco (which must be installed) to convert
    it into an LTL formula.

  - ltlsynt has a new option --from-pgame that takes a parity game in
    extended HOA format, as used in the Synthesis Competition.

  Library:

  - The new function suffix_operator_normal_form() implements
    transformation of formulas to Suffix Operator Normal Form,
    described in [cimatti.06.fmcad].

  - "original-classes" is a new named property similar to
    "original-states".  It maps an each state to an unsigned integer
    such that if two classes are in the same class, they are expected
    to recognize the same language.  The "original-states" should be
    prefered property when that integer correspond to some actual
    state.

  - tgba_determinize() learned to fill the "original-classes" property.
    States of the determinized automaton that correspond to the same
    subset of states of the original automaton belong to the same
    class.  Filling this property is only done on demand has it inccurs
    on small overhead.

  - sbacc() learned to take the "original-classes" property into
    account and preserve it.

  - The HOA parser and printer learned to map the synthesis-outputs
    property of Spot to the controllable-AP header for the Extended
    HOA format used in SyntComp.   https://arxiv.org/abs/1912.05793

  - The automaton parser learned to parse games in the PGSolver format.
    See the bottom of https://spot.lrde.epita.fr/ipynb/games.html for
    an example.

  - "aliases" is a new named property that is filled by the HOA parser
    using the list of aliases declared in the HOA file, and then used
    by the HOA printer on a best-effort basis.  Aliases can be used to
    make HOA files more compact or more readable.  But another